# python-ml-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: rows-dataset.csv
src/: data_processing.py  main.py
