[project]
name = "python-ml-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Lefrancq", email = "david.lefrancq@gmail.com"},
]
dependencies = ["numpy>=2.1.3", "pandas>=2.2.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/app.py"